# cric-pred

./: .gitignore  README  avg_score.py  ballcount.py  bet_scraper.py  bet_scraper_claude.py  bet_size.py  bowling_style_tally.csv  bowling_styles.py  cricWAR_data_processor.py  cricWAR_main.py  cricinfo_scraper.py  cricket_betting_data_20241128_151514.json  cricket_betting_data_20241128_154453.json  cricket_betting_data_20250129_075738.json  cricket_betting_data_20250224_192616.json  cricket_betting_data_20250224_193124.json  cricket_odds_Abu_Dhabi_T10.json  cricket_odds_ICC_T20_World_Cup.json  cricket_odds_Test_Matches.json  cricket_odds_The_Ashes.json  cricket_odds_United_States_Premier_League.json  cricket_sequences_mask.npy  cricket_transformer.pth  cricket_transformer_model(1).pth  data_processing.py  data_testing.py  expected_runs.py  ground_average_scores.json  historical_odds_scraper.py  label_encoders(1).pkl  label_encoders.pkl  match_simulation.py  missing_players.py  names.csv  names_v2.csv  nueralnet_v1.py  parallel-cricket-simulations.py  parse.py  parse_v2.py  (+17 more)
data/: historical_odds.csv  missing_players.csv
data/ipl_it20/: 1415714.json  1415740.json  README.txt
data/t20s_male_json/: 1415705.json  1415748.json  1416084.json  1416086.json  README.txt
ipl_it20/: 1415729.json  1415743.json  1416079.json  1416085.json  1422809.json
output/data/: expected_runs.csv  ipl_2019_detailed_stats.csv  player_war_stats.csv
player_cache/: A_Adams.json  A_Finch.json  Ajay_Jadeja.json  B_Masaba.json  Jadeja.json
