[project]
name = ""
version = "0.0.1"
dependencies = [
    "absl-py==2.1.0",
    "astunparse==1.6.3",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.7.4",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "filelock==3.15.4",
    "flatbuffers==24.3.25",
    "fonttools==4.54.1",
    "fsspec==2024.6.1",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.64.1",
    "h11==0.14.0",
    "h5py==3.11.0",
    "idna==3.7",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "keras==3.4.1",
    "kiwisolver==1.4.7",
    "libclang==18.1.1",
    "markdown==3.6",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.3.2",
    "mpmath==1.3.0",
    "namex==0.0.8",
    "networkx==3.3",
    "numpy==1.26.4",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "outcome==1.3.0.post0",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==11.0.0",
    "protobuf==4.25.3",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "rpy2==3.5.16",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "selenium==4.26.1",
    "six==1.16.0",
    "sklearn==0.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.5",
    "sympy==1.13.1",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.16.2",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "torch==2.2.2",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "tzlocal==5.2",
    "urllib3==2.2.2",
    "websocket-client==1.8.0",
    "werkzeug==3.0.3",
    "wrapt==1.16.0",
    "wsproto==1.2.0",
]

[tool.uv]
package = false
